[project]
name = "claude-model-proxy"
version = "0.1.0"
description = "Claude CLI to Ollama proxy"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.41.0",
]

[project.scripts]
proxy = "proxy:main"
